--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,8 +7,15 @@
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <button ion-button (click)="getContacts()">getContacts</button>
+
+  <ion-list>
+    <ion-item *ngFor="let contact of contactList">
+      <ion-avatar *ngIf="contact.image" item-start>
+        <img [src]="contact.image">
+      </ion-avatar>
+      {{contact.name}}
+      <p>{{contact.number}}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
